BE: update network docker

--- a/e-library-api/docker-compose.yml
+++ b/e-library-api/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - MONGO_URI=mongodb://mongo:27017/nestjs_db
     depends_on:
       - mongo
+    networks:
+      - my_network
 
   mongo:
     image: mongo:latest
@@ -16,6 +18,10 @@ services:
       - '27017:27017'
     volumes:
       - mongo-data:/data/db
+    networks:
+      - my_network
 
 volumes:
   mongo-data:
+networks:
+  my_network:
