--- a/e-library-api/docker-compose.yml
+++ b/e-library-api/docker-compose.yml
@@ -1,27 +1,12 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  app:
-    build: .
-    ports:
-      - '3000:3000'
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/nestjs_db
-    depends_on:
-      - mongo
-    networks:
-      - my_network
-
   mongo:
     image: mongo:latest
     ports:
-      - '27017:27017'
+      - "27017:27017"
     volumes:
       - mongo-data:/data/db
-    networks:
-      - my_network
 
 volumes:
   mongo-data:
-networks:
-  my_network:
